test/corpus/comments.txt
===================
Top level full line
===================

scn test
; this is a comment
int i
; this is another comment
begin gamemode
end
; this is a third comment

---
(source_file
  (script_declaration (reference))
  (comment)
  (variable_declaration
    (number_type) (reference))
  (comment)
  (block
    (game_feature))
  (comment))

=================
Top level in-line
=================

scn test ; this is a comment
int i ; this is another comment
begin gamemode ; this is a third comment
end ;this is a comment without leading whitespace

---
(source_file
  (script_declaration
    (reference))
  (comment)
  (variable_declaration
    (number_type) (reference))
  (comment)
  (block
    (game_feature)
    (comment))
  (comment))

=======================
Semicolon Inside String
=======================
scn test
begin gamemode
let x := "hi;bye"
let x := "hi%ghi;bye%gbye"
end
---

(source_file
  (script_declaration (reference))
  (block
    (game_feature)
    (statement
      (let_statement
        (left (reference))
        (assignment)
        (right (plain_string))))
    (statement
      (let_statement
        (left (reference))
        (assignment)
        (right
          (string
            (format_specifier)
            (format_specifier)))))))
