test/corpus/compile_with_oblivion_expressions.txt
===========
Basic block
===========
scn test
begin _gamemode
end
---
(source_file
  (script_declaration
    (reference))
  (block
    (game_feature)))

=====================
User-defined Function
=====================
scn test
begin _function {}
end
---
(source_file
  (script_declaration
    (reference))
  (block
    (user_defined_function)))
