test/corpus/event_handler.txt
===========
Plain Event
===========
scn test
begin gamemode
seteventhandler "OnLoad" function
end
---

(source_file
  (script_declaration (reference))
  (block
    (game_feature)
    (statement
      (function)
      (args
        (plain_string)
        (reference)))))

==============
Filtered Event
==============
scn test
begin gamemode
seteventhandler "OnHit" FnOnHitByPlayer second::PlayerRef
seteventhandler "OnHit", FnOnHitByPlayer, first::"string", second::PlayerRef
end
---

(source_file
  (script_declaration (reference))
  (block
    (game_feature)
    (statement
      (function)
      (args
        (plain_string)
        (reference)
        (filter (reference) (reference))))
    (statement
      (function)
      (args
        (plain_string)
        (reference)
        (filter (reference) (plain_string))
        (filter (reference) (reference))))))
