test/corpus/set_statement.txt
=======
Literal
=======
scn test
int x
begin gamemode
set x to reference 
end
---
(source_file
  (script_declaration (reference))
  (variable_declaration (number_type) (reference))
  (block
    (game_feature)
    (statement
      (set_statement
        (left (reference))
        (right (reference))))))

====================
One Binary Operation
====================
scn test
int x
begin gamemode
set x to x + 1
end
---

(source_file
  (script_declaration (reference))
  (variable_declaration (number_type) (reference))
  (block
    (game_feature)
    (statement
      (set_statement
        (left (reference))
        (right
          (reference)
          (binary_operator)
          (integer))))))

======================
Multi Binary Operation
======================
scn test
int x
begin gamemode
set x to x + 1 / 2
end
---

(source_file
  (script_declaration (reference))
  (variable_declaration (number_type) (reference))
  (block
    (game_feature)
    (statement
      (set_statement
        (left
          (reference))
        (right
          (reference)
          (binary_operator)
          (integer)
          (binary_operator)
          (integer))))))

=================================
Parenthesized One Binary Operator
=================================
scn test
int x
begin gamemode
set x to (x + 1)
end
---

(source_file
  (script_declaration (reference))
  (variable_declaration (number_type) (reference))
  (block
    (game_feature)
    (statement
      (set_statement
        (left
          (reference))
        (right
          (parenthesized_expression
            (reference)
            (binary_operator)
            (integer)))))))

=================================
Parenthesized Multi Binary Operator
=================================
scn test
int x
begin gamemode
set x to (x + 1 / 2)
end
---

(source_file
  (script_declaration (reference))
  (variable_declaration (number_type) (reference))
  (block
    (game_feature)
    (statement
      (set_statement
        (left
          (reference))
        (right
          (parenthesized_expression
            (reference)
            (binary_operator)
            (integer)
            (binary_operator)
            (integer)))))))

============================================
Parenthesized Nested Multi Binary Operator 1
============================================
scn test
int x
begin gamemode
set x to (x + (1 / 2))
end
---

(source_file
  (script_declaration (reference))
  (variable_declaration (number_type) (reference))
  (block
    (game_feature)
    (statement
      (set_statement
        (left
          (reference))
        (right
          (parenthesized_expression
            (reference)
            (binary_operator)
            (parenthesized_expression
              (integer)
              (binary_operator)
              (integer))))))))

============================================
Parenthesized Nested Multi Binary Operator 2
============================================
scn test
int x
begin gamemode
set x to ((x + 1) / 2)
end
---

(source_file
  (script_declaration (reference))
  (variable_declaration (number_type) (reference))
  (block
    (game_feature)
    (statement
      (set_statement
        (left
          (reference))
        (right
          (parenthesized_expression
            (parenthesized_expression
              (reference)
              (binary_operator)
              (integer))
            (binary_operator)
            (integer)))))))

====================
One Unary Operation
====================
scn test
int x
begin gamemode
set x to $x
end
---

(source_file
  (script_declaration (reference))
  (variable_declaration (number_type) (reference))
  (block
    (game_feature)
    (statement
      (set_statement
        (left (reference))
        (right
          (unary_operator)
          (reference))))))

======================
Multi Unary Operation
======================
scn test
int x
int y
string_var z
begin gamemode
set z to $x + $y
end
---

(source_file
  (script_declaration (reference))
  (variable_declaration (number_type) (reference))
  (variable_declaration (number_type) (reference))
  (variable_declaration (string_type) (reference))
  (block
    (game_feature)
    (statement
      (set_statement
        (left
          (reference))
        (right
          (unary_operator)
          (reference)
          (binary_operator)
          (unary_operator)
          (reference))))))

=================================
Parenthesized One Unary Operator
=================================
scn test
int x
begin gamemode
set x to ($x)
end
---

(source_file
  (script_declaration (reference))
  (variable_declaration (number_type) (reference))
  (block
    (game_feature)
    (statement
      (set_statement
        (left
          (reference))
        (right
          (parenthesized_expression
            (unary_operator)
            (reference)))))))

=================================
Parenthesized Multi Unary Operator
=================================
scn test
int x
int y
string_var z
begin gamemode
set z to ($x + $y)
end
---

(source_file
  (script_declaration (reference))
  (variable_declaration (number_type) (reference))
  (variable_declaration (number_type) (reference))
  (variable_declaration (string_type) (reference))
  (block
    (game_feature)
    (statement
      (set_statement
        (left
          (reference))
        (right
          (parenthesized_expression
            (unary_operator)
            (reference)
            (binary_operator)
            (unary_operator)
            (reference)))))))

============================================
Parenthesized Nested Multi Unary Operator 1
============================================
scn test
int x
int y
string_var z
begin gamemode
set z to ($x + ($y + 1))
end
---

(source_file
  (script_declaration (reference))
  (variable_declaration (number_type) (reference))
  (variable_declaration (number_type) (reference))
  (variable_declaration (string_type) (reference))
  (block
    (game_feature)
    (statement
      (set_statement
        (left
          (reference))
        (right
          (parenthesized_expression
            (unary_operator)
            (reference)
            (binary_operator)
            (parenthesized_expression
              (unary_operator)
              (reference)
              (binary_operator)
              (integer))))))))

============================================
Parenthesized Nested Multi Unary Operator 2
============================================
scn test
int x
int y
string_var z
begin gamemode
set z to (($x + $y) + 1)
end
---

(source_file
  (script_declaration (reference))
  (variable_declaration (number_type) (reference))
  (variable_declaration (number_type) (reference))
  (variable_declaration (string_type) (reference))
  (block
    (game_feature)
    (statement
      (set_statement
        (left
          (reference))
        (right
          (parenthesized_expression
            (parenthesized_expression
              (unary_operator)
              (reference)
              (binary_operator)
              (unary_operator)
              (reference))
            (binary_operator)
            (integer)))))))

